Ajustes nos YAML
