# solution/controllers/statistical.js
@@ -25,10 +25,10 @@ function getSequence(seqtype) {
 }
 
 exports.postStatisticals = function(req, res) {
-    console.log("»»» Accepted POST request to calculate statID:  " + req.query.StatID + "for DatasetID: " + req.dataset_id + " and UserID: " + req.username );
-    if (req.username && req.dataset_id && req.query.StatID ) {
+    console.log("»»» Accepted POST request to calculate statID:  " + req.stat_id + "for DatasetID: " + req.dataset_id + " and UserID: " + req.username );
+    if (req.username && req.dataset_id && req.stat_id ) {
         callbackID = getSequence("stID");
-        var urlCallback = CALLBACK_ROOT + "/Users/" + req.username + "/Datasets/" + req.dataset_id + "/Stats/"+req.query.StatID+"/Results"
+        var urlCallback = CALLBACK_ROOT + "/Users/" + req.username + "/Datasets/" + req.dataset_id + "/Stats/"+req.stat_id+"/Results"
 
         var datasetV = "";
         var result = 0;
@@ -36,38 +36,38 @@ exports.postStatisticals = function(req, res) {
             if (err) return console.error(err);
             console.log(dataset);
             datasetV = dataset[0];
-            if(GEOMETRIC_MEAN == req.query.StatID){
+            if(GEOMETRIC_MEAN == req.stat_id){
                 result = stat.mean(datasetV.values);
             }
-            else if(MEDIAN == req.query.StatID){
+            else if(MEDIAN == req.stat_id){
                 result = stat.median(datasetV.values);
             }
-            else if(MODE == req.query.StatID){
+            else if(MODE == req.stat_id){
                 result = stat.mode(datasetV.values);
             }
-            else if(MID_RANGE == req.query.StatID){
+            else if(MID_RANGE == req.stat_id){
                 result = stat.average(datasetV.values);
             }
-            else if(VARIANCE == req.query.StatID){
+            else if(VARIANCE == req.stat_id){
                 result = stat.variance(datasetV.values);
             }
-            else if(STD_DEVIATION == req.query.StatID){
+            else if(STD_DEVIATION == req.stat_id){
                 result = stat.standardDeviation(datasetV.values);
             }
-            else if(COUNT == req.query.StatID){
+            else if(COUNT == req.stat_id){
                 result = datasetV.values.length;
             }
-            else if(MIN == req.query.StatID){
+            else if(MIN == req.stat_id){
                 result = stat.min(datasetV.values);
             }
-            else if(MAX == req.query.StatID){
+            else if(MAX == req.stat_id){
                 result = stat.max(datasetV.values);
             }
 
         })
         res.setHeader("Content-Type", "application/html");
         res.end("<html><body><h1> " +
-            "<p>Success!... Your request result is"+result+"</p>" +
+            "<p>Success!... Your request result is "+result+"</p>" +
             "<p>Or come back to Home Page to request more operations <a href='http://localhost:3001/index.html'>Home Page</a></p>" +
             "</h1></body></html>");
     } else {
@@ -82,22 +82,3 @@ exports.postStatisticals = function(req, res) {
     }
 };
 
-exports.getStatisticals = function(req, res) {
-
-
-};
-
-exports.getStatistical = function(req, res) {
-
-
-};
-
-exports.putStatistical = function(req, res) {
-
-
-};
-
-exports.deleteStatistical = function(req, res) {
-
-
-};
