# swagger/Datasheet_svc.yaml
@@ -3,7 +3,7 @@ swagger: "2.0"
 info:
   version: 1.0.0
   title: Datasheet Service
-  description: This API  allows the consumer to perform several operations in a table matrix.
+  description: This API allows the consumer to perform several operations in a table matrix.
 schemes:
   - http
 host: localhost:3001
@@ -16,11 +16,9 @@ paths:
         - Users
       description: Create a new item in the resource User.
       consumes:
-        - application/json
-        - application/xml
+        - application/x-www-form-urlencoded
       produces:
-        - application/json
-        - application/xml
+        - application/html
       parameters:
         - name: user
           in: body
@@ -38,12 +36,8 @@ paths:
       tags:
         - Users
       description: Get all available registered users.
-      consumes:
-        - application/json
-        - application/xml
       produces:
         - application/json
-        - application/xml
       responses:
         200:
           description: User(s) was/were found.
@@ -51,17 +45,15 @@ paths:
             $ref: '#/definitions/UserListResponse'
         400:
           description: Bad request. Check the definition documentation.
+        409:
+          description: Duplicated. Check the definition documentation.
   /Users/{UserID}:
     get:
       tags:
         - Users
       description: Gets the information for a specific UserID
-      consumes:
-        - application/json
-        - application/xml
       produces:
         - application/json
-        - application/xml
       parameters:
         - name: UserID
           in: path
@@ -72,8 +64,6 @@ paths:
           description: The user was found.
           schema:
               $ref: '#/definitions/Users'
-        400:
-          description: Bad request. Check the definition documentation.
         404:
           description: User wasn't found.
     put:
@@ -81,11 +71,9 @@ paths:
         - Users
       description: Update the information for a specific UserID.
       consumes:
-        - application/json
-        - application/xml
+        - application/x-www-form-urlencoded
       produces:
         - application/json
-        - application/xml
       parameters:
         - name: UserID
           in: path
@@ -93,7 +81,7 @@ paths:
           type: string
         - name: body
           in: body
-          required: true
+          required: false
           schema:
             $ref: '#/definitions/UsersRequest'
       responses:
@@ -111,8 +99,7 @@ paths:
         - Datasets
       description: Create datasets.
       consumes:
-        - application/json
-        - application/xml
+        - application/x-www-form-urlencoded
       produces:
         - application/html
       parameters:
@@ -120,11 +107,21 @@ paths:
           in: path
           required: true
           type: string
-        - name: dataset
-          in: body
+        - name: row
+          in: query
           required: true
-          schema:
-            $ref: '#/definitions/Datasets'
+          description: Row number of dataset
+          type: integer
+        - name: col
+          in: query
+          required: true
+          description: Column number of dataset
+          type: integer
+        - name: values
+          in: query
+          description:  values of dataset separeted by comma ","
+          type: array
+          items: { type: integer,}
       responses:
         201:
           description: Dataset created successfully.
@@ -136,9 +133,6 @@ paths:
       tags:
         - Datasets
       description: Gets all existents datasets of this user.
-      consumes:
-        - application/json
-        - application/xml
       produces:
         - application/html
       parameters:
@@ -159,10 +153,7 @@ paths:
     get:
       tags:
         - Datasets
-      description: Gets the information for a specific DatasetID 
-      consumes:
-        - application/json
-        - application/xml
+      description: Gets the information for a specific DatasetID
       produces:
         - application/html
       parameters:
@@ -188,8 +179,7 @@ paths:
         - Datasets
       description: Update a dataset.
       consumes:
-        - application/json
-        - application/xml
+        - application/x-www-form-urlencoded
       produces:
         - application/html
       parameters:
@@ -201,11 +191,22 @@ paths:
           in: path
           required: true
           type: string
-        - name: dataset
-          in: body
+        - name: row
+          in: query
           required: true
-          schema:
-            $ref: '#/definitions/DatasetRequest'
+          description: Row number of dataset
+          type: integer
+        - name: col
+          in: query
+          required: true
+          description: Column number of dataset
+          type: integer
+        - name: values
+          in: query
+          required: true
+          description:  values of dataset separeted by comma ","
+          type: array
+          items: { type: integer,}
       responses:
         200:
           description: Dataset successfully updated
@@ -217,9 +218,6 @@ paths:
       tags:
         - Datasets
       description: Delete a specific DatasetID.
-      consumes:
-        - application/json
-        - application/xml
       produces:
         - application/html
       parameters:
@@ -244,11 +242,9 @@ paths:
         - Macros
       description: Creates a macro
       consumes:
-        - application/json
-        - application/xml
+        - application/x-www-form-urlencoded
       produces:
-        - application/json
-        - application/xml
+        - application/html
       parameters:
         - name: UserID
           in: path
@@ -275,12 +271,8 @@ paths:
       tags:
         - Macros
       description: Gets all existent macros of current user.
-      consumes:
-        - application/json
-        - application/xml
       produces:
         - application/json
-        - application/xml
       parameters:
         - name: UserID
           in: path
@@ -305,11 +297,9 @@ paths:
         - Macros
       description: Update a macro.
       consumes:
-        - application/json
-        - application/xml
+        - application/x-www-form-urlencoded
       produces:
         - application/json
-        - application/xml
       parameters:
         - name: UserID
           in: path
@@ -336,12 +326,8 @@ paths:
       tags:
         - Stats
       description: List all operations (ID, MathType and Description) available for a specific statistic math operation.
-      consumes:
-        - application/json
-        - application/xml
       produces:
         - application/json
-        - application/xml
       responses:
         200:
           description: Stat(s) available.
@@ -349,22 +335,18 @@ paths:
               $ref: '#/definitions/StatResponse'
         400:
           description: Bad request. Check the definition documentation.
-  /Trnsfs:
+  /Transfs:
     get:
       tags:
         - Transformations
       description: List all operations (ID, MathType and Description) available for a specific transformation math operation.
-      consumes:
-        - application/json
-        - application/xml
       produces:
         - application/json
-        - application/xml
       responses:
         200:
           description: Tansoformation(s) available.
           schema:
-              $ref: '#/definitions/TrnsfResponse'
+              $ref: '#/definitions/Transfs'
         400:
           description: Bad request. Check the definition documentation.
   /Charts:
@@ -372,12 +354,8 @@ paths:
       tags:
         - Charts
       description: Return a chart representation (image binary file) of the dataset.
-      consumes:
-        - application/json
-        - application/xml
       produces:
         - application/json
-        - application/xml
       responses:
         200:
           description: Charts(s) available.
@@ -385,28 +363,28 @@ paths:
               $ref: '#/definitions/Chart'
         400:
           description: Bad request. Check the definition documentation.
-  /Users/{UserID}/Datasets/{DatasetID}/Stats:
+  /Users/{UserID}/Datasets/{DatasetID}/Stats/{StatID}:
     post:
       tags:
         - Stats
       description: Calculate stat of entire dataset
       consumes:
-        - application/json
-        - application/xml
+        - application/x-www-form-urlencoded
       produces:
-        - application/json
-        - application/xml
+        - application/html
       parameters:
        - name: UserID
          in: path
          required: true
+         description: Username
          type: string
        - name: DatasetID
          in: path
          required: true
+         description: Number of Dataset ID
          type: string
        - name: StatID
-         in: query
+         in: path
          required: true
          description: Number of statID
          type: string
@@ -420,32 +398,20 @@ paths:
          required: false
          description: Column number of dataset
          type: integer
-       - name: MyRef
-         in: query
-         required: true
-         description: Reference for callback after operation finishes
-         type: string
-       - name: URLCallback
-         in: query
-         required: true
-         description: URL for callback after operation finishes
-         type: string
       responses:
         202:
           description: Accepted.
         400:
           description: Bad request. Check the definition documentation.
-  /Users/{UserID}/Datasets/{DatasetID}/Trnsf:
+  /Users/{UserID}/Datasets/{DatasetID}/Transf/{TransfID}:
     post:
       tags:
         - Transformations
-      description: Calculate transformation of a dataset
+      description: Calculate transformation of entire dataset
       consumes:
-        - application/json
-        - application/xml
+        - application/x-www-form-urlencoded
       produces:
-        - application/json
-        - application/xml
+        - application/html
       parameters:
        - name: UserID
          in: path
@@ -455,23 +421,13 @@ paths:
          in: path
          required: true
          type: string
-       - name: TrnsfID
-         in: query
+       - name: TransfID
+         in: path
          required: true
          type: string
        - name: value
          in: query
          description: value of the transformation. 
-         type: string
-       - name: MyRef
-         in: query
-         required: true
-         description: Reference for callback after operation finishes
-         type: string
-       - name: URLCallback
-         in: query
-         required: true
-         description: URL for callback after operation finishes
          type: string
       responses:
         202:
@@ -482,17 +438,15 @@ paths:
           description: Unexpected error
           schema:
             $ref: "#/definitions/Error"
-  /Users/{UserID}/Datasets/{DatasetID}/{MacroID}/:
+  /Users/{UserID}/Datasets/{DatasetID}/Marcros/{MacroID}/:
     post:
       tags:
         - Stats
-      description: Calculate stat of entire dataset
+      description: Calculate macro for a given dataset
       consumes:
-        - application/json
-        - application/xml
+        - application/x-www-form-urlencoded
       produces:
-        - application/json
-        - application/xml
+        - application/html
       parameters:
        - name: UserID
          in: path
@@ -516,16 +470,6 @@ paths:
          required: false
          description: Column number of dataset
          type: integer
-       - name: MyRef
-         in: query
-         required: true
-         description: Reference for callback after operation finishes
-         type: string
-       - name: URLCallback
-         in: query
-         required: true
-         description: URL for callback after operation finishes
-         type: string
       responses:
         202:
           description: Accepted.
@@ -581,18 +525,13 @@ definitions:
         properties:
           id:
             type: string
-  Trnsfs:
+  Transfs:
     type: object
     properties:
       transf_id:
         type: string
       desc_transfs:
         type: string
-  TrnsfResponse:
-    type: array
-    items: {
-      "$ref": "#/definitions/Trnsfs"
-    }
   Stat:
     type: object
     properties:
@@ -627,9 +566,6 @@ definitions:
       username:
         type: string
         description: Unique identifier as nickname. e.g. user123
-      password:
-        type: string
-        description: Your password code.
   UsersRequest:
     type: object
     properties:
@@ -666,22 +602,6 @@ definitions:
       values:
         type: string
         description: List of values of dataset in HTML.
-  DatasetRequest:
-    type: object
-    properties:
-      rows:
-        type: integer
-        description: The qtd. line number of dataset.
-      cols:
-        type: integer
-        description: The qtd. column number of dataset.
-      values:
-        type: array
-        items: {
-          type: integer,
-          description:  values of dataset.
-        }
-        description: List of values of dataset.
   DatasetID:
     type: object
     properties:
@@ -694,9 +614,6 @@ definitions:
       stat_id:
         type: string
         description: Unique identifier representing a specific statistic math id
-      stat_type:
-        type: string
-        description: the type of stat. E.g. StatMeasure, Transformations, Charts.
       desc_stat:
         type: string
         description: description of operation stat.
